[package]
name = "portal-rs"
version = "0.1.0"
edition = "2024"
description = "A Portal you imagined"
license = "MIT"
repository = "https://github.com/fb0sh/portal-rs"
authors = ["fb0sh <fb0sh@outlook.com>"]

[dependencies]
# net or discover
get_if_addrs = "0.5"
mdns = "3.0"

# utils
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


# crypto
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
hex = "0.4"
rand = "0.8"
pbkdf2 = "0.12"
argon2 = "0.5"
hkdf = "0.12"
